--- a/dev/templates/footer.html
+++ b/dev/templates/footer.html
@@ -156,6 +156,7 @@ style="background-color: #B1FF5C;
 <script src="assets/js/jquery.mask.min.js"></script>
 <script src="assets/js/hideShowPassword.min.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/swiper-bundle.min.js"></script>
 <script src="assets/js/nice-select2.js"></script>
 <script src="assets/js/select-icon.js"></script>
 <script src="assets/js/custom.js"></script>
